# AlFalah

./: AGENT_PROMPT.md  quranAPI.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/quran/: .~lock.quran-metadata-juz.csv#  quran-metadata-juz.csv  quran-metadata-surah-name.csv  quranTest.py
app/src/main/assets/quran/surahsQPC/: .~lock.qpc-v2-15-lines.csv#  qpc-v2-15-lines.csv  surah_001.json  surah_002.json  surah_003.json  surah_004.json  surah_005.json  surah_006.json  surah_007.json  surah_008.json  surah_009.json  surah_010.json  surah_011.json  surah_012.json  surah_013.json  surah_014.json  surah_015.json  surah_016.json  surah_017.json  surah_018.json  surah_019.json  surah_020.json  surah_021.json  surah_022.json  surah_023.json  surah_024.json  surah_025.json  surah_026.json  surah_027.json  surah_028.json  surah_029.json  surah_030.json  surah_031.json  surah_032.json  surah_033.json  surah_034.json  surah_035.json  surah_036.json  surah_037.json  surah_038.json  (+76 more)
app/src/main/assets/shaders/: clay.frag.glsl  clay.vert.glsl  rect.frag.glsl  text.frag.glsl  text.vert.glsl
app/src/main/cpp/: AGENTS.md  CMakeLists.txt  native-lib.cpp
app/src/main/cpp/engine/: FontManager.cpp  FontManager.hpp
app/src/main/cpp/engine/renderer/: ClayRenderer.cpp  ClayRenderer.hpp  FontAtlas.cpp  FontAtlas.hpp  ImageLoader.cpp  ImageLoader.hpp  Renderer.cpp  Renderer.hpp
app/src/main/cpp/engine/ui/: ClaySystem.cpp
app/src/main/cpp/quran/: QuranDatabase.cpp  QuranDatabase.hpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
